tests/rosetta/out/C/array-length.error
cc: exit status 1
/tmp/array-length.c: In function ‘mochi_main’:
/tmp/array-length.c:40:21: error: incompatible type for argument 1 of ‘_str’
   40 |   char *tmp1 = _str(arr);
      |                     ^~~
      |                     |
      |                     list_string
/tmp/array-length.c:30:23: note: expected ‘int’ but argument is of type ‘list_string’
   30 | static char *_str(int v) {
      |                   ~~~~^
/tmp/array-length.c:46:21: error: incompatible type for argument 1 of ‘_str’
   46 |   char *tmp7 = _str(arr);
      |                     ^~~
      |                     |
      |                     list_string
/tmp/array-length.c:30:23: note: expected ‘int’ but argument is of type ‘list_string’
   30 | static char *_str(int v) {
      |                   ~~~~^
/tmp/array-length.c:52:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
   52 |   printf("%d\n", tmp12);
      |           ~^     ~~~~~
      |            |     |
      |            int   char *
      |           %s
